--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "postbuild": "pagefind --site dist"
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
@@ -22,6 +23,7 @@
     "@astrojs/vercel": "^7.8.1",
     "@hbsnow/rehype-sectionize": "^1.0.7",
     "@iconify-json/lucide": "^1.2.4",
+    "@prisma/client": "^5.20.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -29,16 +31,19 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@rehype-pretty/transformers": "^0.13.2",
     "@shikijs/transformers": "^1.16.3",
-    "@types/react": "^18.3.5",
+    "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.11.3",
     "astro-icon": "^1.1.1",
     "bootstrap-icons": "^1.11.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.441.0",
+    "fuse.js": "^7.0.0",
+    "lucide-react": "^0.447.0",
+    "mdast-util-to-string": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "reading-time": "^1.5.0",
     "rehype-katex": "^7.0.0",
     "rehype-pretty-code": "^0.14.0",
     "remark-emoji": "^5.0.1",
@@ -50,12 +55,14 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@astrojs/node": "^8.3.4",
     "@tailwindcss/typography": "^0.5.13",
     "daisyui": "^4.12.10",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-astro-organize-imports": "^0.4.9",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "prisma": "^5.20.0",
     "sharp": "^0.33.5"
   },
   "prettier": {
