--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "bootstrap-icons": "^1.11.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "focus-trap-react": "^10.3.0",
     "fuse.js": "^7.0.0",
     "lucide-react": "^0.447.0",
     "mdast-util-to-string": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-transition-group": "^4.4.5",
     "reading-time": "^1.5.0",
     "rehype-katex": "^7.0.0",
     "rehype-pretty-code": "^0.14.0",
@@ -52,11 +54,13 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@astrojs/node": "^8.3.4",
     "@tailwindcss/typography": "^0.5.13",
+    "@types/react-transition-group": "^4.4.11",
     "daisyui": "^4.12.10",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
