--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "prettier": "prettier --write .",
-    "postbuild": "pagefind --site dist"
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
