--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "astro check && astro build && pnpm prisma migrate deploy &&pnpm prisma generate",
     "preview": "astro preview",
     "astro": "astro",
     "prettier": "prettier --write ."
